<resources>
    <string name="app_name">Pekalongan Store</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Transaksi</string>
    <string name="title_notifications">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_now">Daftar Sekarang</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_login">Login</string>
    <string name="title_belum_punya_akun">Belum Punya Akun?</string>
    <string name="title_register">Daftar</string>
    <string name="title_name">Nama Lengkap</string>
    <string name="title_sudah_punya_akun">Sudah Punya akun?</string>
    <string name="title_masuk_akun_yang_ada">Masuk Akun Yang Sudah Ada</string>
    <string name="title_category">Kategori</string>
    <string name="foo">Lorem Ipsum</string>
    <string name="title_your_product">Produk Kamu</string>
    <string name="title_your_etalase">Etalase Kamu</string>
    <string name="title_your_store">Toko Kamu</string>
    <string name="title_change_profile">Ubah Profile</string>
    <string name="title_comment_change_profile">Ubah informasi pribadi kamu disini</string>
    <string name="title_change_address">Ubah Alamat</string>
    <string name="title_comment_change_address">Ubah informasi alamat pengiriman kamu</string>
    <string name="title_logout">Logout</string>
    <string name="title_comment_logout">Akhiri sesi kamu saat ini</string>
    <string name="title_empty_store">Kamu belum memiliki toko</string>
    <string name="title_empty_store_comment">Sepertinya kamu belum punya toko, Ayo daftar jadi penjual untuk memulai bisnis kamu</string>
    <string name="title_please_wait">Mohon Tunggu...</string>
    <string name="label_store_user_title">Mulai bisnismu \n di Pekalongan Store</string>
    <string name="label_store_user_description">Buka toko mu sekarang dan dapatkan beberapa manfaat sebagai penjual</string>
    <string name="label_store_user_circle1">Buka toko dengan mudah, praktis dan tanpa syarat</string>
    <string name="label_store_user_circle2">Akses market yang luas ke \nseluruh pengguna potensial di \nseluruh Indonesia</string>
    <string name="label_store_user_circle3">Dapatkan fitur ekslusif yang \nmenunjang kebutuhan bisnismu</string>
    <string name="title_hallo">Hallo,</string>
    <string name="title_command_create_store">Silahkan isi detail toko kamu, agar orang memudahkan \norang lain dalam berbelanja di toko kamu</string>
    <string name="title_store_name">Nama Toko</string>
    <string name="title_store_description">Deskripsi Toko</string>
    <string name="title_store_location">Lokasi Toko</string>
    <string name="title_search_subdistrict">Cari Kecamatan</string>
    <string name="title_command_search_district">Silahkan masukan Nama Kecamatan kamu  di kolom pencarian</string>
    <string name="title_comment_no_subdistrict">Maaf sepertinya Kelurahan / Desa yang kamu cari tidak ada di data kami</string>
    <string name="title_retry">Coba lagi</string>
    <string name="title_failed_get_data">Gagal mendapatkan data</string>
    <string name="title_unstable_network">Sepertinya jaringan sedang tidak stabil, silahkan coba lagi nanti!</string>
    <string name="title_save">Simpan</string>
    <string name="title_phone">No Telp</string>
    <string name="title_address">Alamat</string>
    <string name="title_subdistrict">Kecamatan</string>
    <string name="title_photo_profile">Foto Profil</string>
    <string name="title_gallery">Galeri</string>
    <string name="title_camera">Kamera</string>
    <string name="title_delete_photo">Hapus Foto</string>
    <string name="title_search_villages">Kelurahan</string>
    <string name="title_command_search_villages">Silahkan masukan Nama Kelurahan kamu  di kolom pencarian</string>
    <string name="title_primary_address">Alamat Utama</string>
    <string name="title_edit">Ubah</string>
    <string name="title_delete">Hapus</string>
    <string name="title_set_primary">Set Utama</string>
    <string name="tittle_command_empty_address">Ayo daftarkan alamat pengiriman kamu, agar mempermudah kurir mengirimkan barang ke alamat tujuan!</string>
    <string name="title_empty_address">Daftar alamat kosong</string>
</resources>
