<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.storeuser.StoreUserFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llBergabung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/size_256"
                android:layout_height="@dimen/size_155"
                android:layout_marginTop="@dimen/margin_10"
                android:src="@drawable/ic_store_open"
                android:layout_gravity="center"/>
            <TextView
                android:layout_marginTop="@dimen/margin_30"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/label_store_user_title"
                android:textAlignment="center"
                android:textColor="@color/font"
                android:lineSpacingExtra="@dimen/line_spacing_4sp"
                android:textSize="@dimen/font_18" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:padding="@dimen/padding_10"
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/label_store_user_description"
                android:textAlignment="center"
                android:textColor="@color/font"
                android:lineSpacingExtra="@dimen/line_spacing_4sp"
                android:textSize="@dimen/font_14" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_37"
                android:layout_marginStart="@dimen/margin_37"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_24dp" />
                <TextView
                    android:id="@+id/tvCircle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textColor="@color/font"
                    android:fontFamily="@font/regular"
                    android:lineSpacingExtra="@dimen/line_spacing_4sp"
                    android:text="@string/label_store_user_circle1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_37"
                android:layout_marginStart="@dimen/margin_37"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_24dp" />
                <TextView
                    android:id="@+id/tvCircle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textColor="@color/font"
                    android:fontFamily="@font/regular"
                    android:lineSpacingExtra="@dimen/line_spacing_4sp"
                    android:text="@string/label_store_user_circle2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_37"
                android:layout_marginStart="@dimen/margin_37"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_24dp" />
                <TextView
                    android:id="@+id/tvCircle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:textColor="@color/font"
                    android:fontFamily="@font/regular"
                    android:lineSpacingExtra="@dimen/line_spacing_4sp"
                    android:text="@string/label_store_user_circle3" />
            </LinearLayout>
            <Button
                android:id="@+id/btnRegister"
                style="@style/buttonPrimaryMatchParent"
                android:layout_marginTop="@dimen/margin_60"
                android:layout_marginStart="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_30"
                android:layout_marginBottom="@dimen/margin_30"
                android:fontFamily="bold"
                android:text="@string/register_now" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>