<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/margin_15"
    android:layout_marginEnd="@dimen/margin_15"
    android:paddingTop="@dimen/padding_20"
    tools:context=".ui.storeuser.create.StoreUserCreateActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llBase"
        android:orientation="vertical">
        <ImageView
            android:layout_width="@dimen/size_256"
            android:layout_height="@dimen/size_155"
            android:layout_gravity="center"
            android:src="@drawable/ic_setup_store"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hallo"
                android:fontFamily="@font/regular"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"/>
            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foo"
                android:layout_marginStart="@dimen/margin_10"
                android:fontFamily="@font/extrabold"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_18"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_command_create_store"
            android:fontFamily="@font/regular"
            android:textColor="@color/font"
            android:textSize="@dimen/font_14"
            android:textAlignment="center"/>
        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:visibility="visible"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_store_name"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/font_14"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etName"
                style="@style/coolEditText"
                android:hint="@string/title_store_name"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_store_description"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/font_14"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etDescription"
                style="@style/coolEditText"
                android:hint="@string/title_store_description"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionDone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_store_location"
                android:layout_marginTop="@dimen/margin_20"
                android:fontFamily="@font/regular"
                android:textSize="@dimen/font_14"/>
            <com.ndroid.CoolEditText
                android:id="@+id/etLocation"
                style="@style/coolEditText"
                android:hint="@string/title_store_location"
                android:inputType="text"
                android:focusable="false"
                android:clickable="true"/>
            <Button
                android:id="@+id/btnRegister"
                style="@style/buttonPrimaryMatchParent"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/register_now"/>
        </LinearLayout>
        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shStore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/margin_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/font_18"
                    android:layout_marginRight="310dp"
                    android:background="@color/placeholder_bg" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_50"
                    android:layout_marginTop="@dimen/margin_5"
                    android:background="@color/placeholder_bg" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/font_18"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginRight="280dp"
                    android:background="@color/placeholder_bg" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_50"
                    android:layout_marginTop="@dimen/margin_5"
                    android:background="@color/placeholder_bg" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/font_18"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginRight="300dp"
                    android:background="@color/placeholder_bg" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_50"
                    android:layout_marginTop="@dimen/margin_5"
                    android:background="@color/placeholder_bg" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/custom_button"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/title_please_wait"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:fontFamily="@font/regular"
                        android:textSize="@dimen/font_14"/>
                </RelativeLayout>
            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>
    </LinearLayout>
</ScrollView>