<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/rlBase"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/size_256"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:fontFamily="@font/bold"
                android:text="@string/title_name"
                android:textSize="@dimen/font_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.ndroid.CoolEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_10"
                android:hint="@string/title_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:theme="@style/coolEditTextFlat"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                android:fontFamily="@font/bold"
                android:text="@string/title_email"
                android:textSize="@dimen/font_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <com.ndroid.CoolEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_10"
                android:hint="@string/title_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:theme="@style/coolEditTextFlat"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                android:fontFamily="@font/bold"
                android:text="@string/title_password"
                android:textSize="@dimen/font_14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <com.ndroid.CoolEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_10"
                android:hint="@string/title_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:theme="@style/coolEditTextFlat"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/custom_button"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/title_please_wait"
                        android:layout_centerVertical="true"
                        android:textColor="@color/white"
                        android:fontFamily="@font/regular"
                        android:textSize="@dimen/font_14"/>
                </RelativeLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>
            <Button
                android:id="@+id/btnRegister"
                style="@style/buttonPrimaryMatchParent"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                android:text="@string/title_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_10"
                android:fontFamily="@font/bold"
                android:text="@string/title_sudah_punya_akun"
                android:layout_marginTop="@dimen/margin_20"
                android:textAlignment="center"
                android:textSize="@dimen/font_14"
                app:layout_constraintBottom_toTopOf="@+id/btnLogin" />
            <Button
                android:id="@+id/btnLogin"
                style="@style/buttonOutlineMatchParent"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:text="@string/title_masuk_akun_yang_ada"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>